...
                    ),
                    label: Text('Заказы'),
                  ),
                  NavigationRailDestination(
                    icon: Icon(
                      Icons.shopping_cart_outlined,
                      key: Key('navBasket'),
                    ),
                    label: Text('Корзина'),
                  ),
                  NavigationRailDestination(
                    icon: Icon(
                      Icons.account_circle_outlined,
                      key: Key('navProfile'),
                    ),
                    label: Text('Профиль'),
                  ),
                ],
              ),
              const VerticalDivider(width: 1),
...
